fix:adding encoding to batch